Finish OverlappingLayer, i will fix bug with .baseLayer class

--- a/styles/components/overlappingLayer.module.scss
+++ b/styles/components/overlappingLayer.module.scss
@@ -1,8 +1,25 @@
 @use '../variable/colors';
 
 .baseLayer{
-    width: 100%;
-    height: 100%;
-    position: fixed;
+    min-height: 100%;
+    width: 100vw;
+    position: absolute;
     background-color: colors.$distortedPrimary;
+    .childrenOverlappingBox{
+        position: relative;
+        top: 60px;
+        margin: 0 auto;
+        width: min-content;
+        height: min-content;
+        .exitButtonBox{
+            position: relative;
+            top: 20px;
+            margin: auto;
+            background-color: darkblue;
+            width: min-content;
+            height: min-content;
+        }
+    }
+
+
 }
